111
- Updated to version 3.2.5
- Rebuilt libx264, ffmpegx and imagemagick

110
- Rebuild ffmpegx with libx264

109
- Rebuilt ffmpgex and imagemagick

108
- Updated to version 3.0.8500


107
- Updated to version 3.0.8300
- Rebuilt ffmpegx

106
- Updated to version 3.0.8100
- Rebuilt ffmpegx

105
- Updated to version 3.0.7100

104
- Updated to version 3.0.6300
- Rebuilt ffmpegx

103
- Updated to version 3.0.6070
- Build for all architectures
- Refer to libsqlite3.so.0 instead of libsqlite3.so

102
- Updated to version 3.0.6030
- Added dedicated ffmpeg and ffprobe
- Removed unused shared libraries

101
- Updated to version 3.0.5985
- Removed mono build dependency

100
- Initial release