@@ -1,3 +1,6 @@
+112
+- Refer to libMagickWand-7
+
 111
 - Updated to version 3.2.5
 - Rebuilt libx264, ffmpegx and imagemagick
